# picolibrary-microchip-sam-d21da1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
ci/: analyze  build  format
configuration/release-atsamd21g18a/: CMakeLists.txt
configuration/testing-interactive-atsamd21g18a-arduino-zero/: CMakeLists.txt  atsamd21g18a-arduino-zero-edbg.ld
docs/: definitions.md  index.md  interrupt.md  library_version.md  peripheral.md  register.md  test-interactive.md  usage.md
git/hooks/: install  pre-commit
include/picolibrary/arm/cortex/m0plus/implementation/: configuration.h
include/picolibrary/arm/cortex/m0plus/implementation/interrupt/: vectors.h
include/picolibrary/microchip/sam/: d21da1.h
include/picolibrary/microchip/sam/d21da1/: interrupt.h  peripheral.h  register.h  version.h
include/picolibrary/microchip/sam/d21da1/interrupt/: default_vector_table.h
include/picolibrary/microchip/sam/d21da1/peripheral/: eic.h  gclk.h  instance.h  nvmctrl.h  pac.h  paca.h  pacb.h  pacc.h  pm.h  rtc.h  sysctrl.h  systick.h  wdt.h
source/: CMakeLists.txt
source/picolibrary/microchip/sam/: d21da1.cc
source/picolibrary/microchip/sam/d21da1/: interrupt.cc  peripheral.cc  register.cc  version.cc.in
source/picolibrary/microchip/sam/d21da1/interrupt/: default_vector_table.cc
source/picolibrary/microchip/sam/d21da1/peripheral/: eic.cc  gclk.cc  instance.cc  nvmctrl.cc  pac.cc  paca.cc  pacb.cc  pacc.cc  pm.cc  rtc.cc  sysctrl.cc  systick.cc  wdt.cc
test/: CMakeLists.txt
test/interactive/: CMakeLists.txt
test/interactive/picolibrary/: CMakeLists.txt
test/interactive/picolibrary/microchip/: CMakeLists.txt
test/interactive/picolibrary/microchip/sam/: CMakeLists.txt
test/interactive/picolibrary/microchip/sam/d21da1/: CMakeLists.txt
